css/styles.css
body {
    background-color: #F1F1F1;
    margin: 0% auto;
}

/*navigation style*/

.inline-block {
    display: inline-block;
    vertical-align: top;
    padding: 3px 10px 0px 10px;
}

.topmenu {
    float: right;
}

.navigation {
    background-color: #404040;
    width: 100%;
    position: sticky;
    top: 0px;
}

.logo {
    width: 10%;  
    padding: 1%;
    text-align: center;
    float: left;
  }

name {
    vertical-align: top;
    color: white;
    font-size: 20px;
    font-family: 'Montserrat';
}

nav {
    width: 80%;
    padding: 1%;
    text-align: right;
}

ul {
    display: inline-block;
    width: 60%;
    vertical-align: top;
    margin-left: auto;
    margin-right: auto;
    font-family: 'Montserrat';
}

a {
    color: white;
    font-size: 20px;
    text-decoration: none;
}

/*Hero style*/

.hero {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    height: 600px;
    width: 35%;
    margin: auto;
}
.heroimage {
    padding-top: 5%;
}

.image {
    width: 267.7px;
    height: 468.58px;
}

.content {
    width: 390px;
    text-align: left;
    padding-top: 5%;
    font-size: 18px;
}

h1 {
    font-size: 32px;
    font-family: 'Montserrat';
    font-weight: normal;
    
}

button {
    background-color: #DD9F96;
    font-size: 20px;
    font-family: 'Montserrat';
    padding: 20px;
    border: none;
    border-radius: 8px;
}

.wavingHand {
    height: 41px;
    width: 41px;
}

.blurb {
    font-family: 'Roboto Slab';
    font-weight:300;
    line-height: 25px;
    letter-spacing: 4%;
    width: 100%;
    padding-bottom: 50px;
    padding-top: 50px;
}

footer {
    background-color: #404040;
    width: 100%;
    bottom: 0px;
    padding-bottom: 1%;
    text-align: center;
    color: white;
}

.footerTitle {
    padding-top: 3%;
    display: block;
    text-align: center;
    color: white;
    font-size: 32px;
    font-family: 'Montserrat';
}

.footerContent {
    font-size: 24px;
    padding-top: .25%;
    padding-bottom: .25%;
    font-family: 'Montserrat';
}

.emoji {
    display: inline;
    margin-left: auto;
    margin-right: auto;
    height: 24px;
    width: 24px;
}

.socialmedia {
    margin-top: 3%;
    padding: 1%;
}

.linkedin {
    height: 48px;
    width: 48px;
}

html, body {
    width: 100%;
    padding: 0px;
    margin: 0px;
}

/*My Skills style*/

#mySkills {
    background-color: #9EC2BC;
    padding-top: 1%;
}

.skillsTitle {
    text-align: center;
}

.flexContainer {
    display: flex;
    justify-content: space-around;
    padding-top: 5%;
    padding-bottom: 5%;
    margin-left: 10%;
    margin-right: 10%;
}

.skillCard {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 20%;
    text-align: center;
    align-items: center;
}

/*My Work style*/

#myWork-Grid {
    display: grid;
    grid-template-rows: max-content 3fr 3fr 3fr max-content;
    margin-left: 20%;
    margin-right: 20%;
    row-gap: 15%;
    padding-bottom: 15%;
}

.workTitle {
    text-align: center;
}

.project-card {
  display: flex;
  align-items: center;
  justify-content: center;
}
.project-details {
    margin-left: 5%;
    margin-right: 5%;
    width: 30%;
    
}

h2 {
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    font-weight: bold;
}

.description {
    font-family: 'roboto slab';
    font-weight: lighter;
    line-height: 25px;
    font-size: 18px;
    letter-spacing: 4%;
    object-fit: scale-down;
}

